# shutdown-button

./: flake.nix  pyproject.toml  shutdown_button.service
src/shutdown_button/: __init__.py
